<resources>
    <string name="app_name">ORTFirebaseTutorial</string>
    <string name="notas_de_alumnos">Notas de Alumnos</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_asignatura">Asignatura</string>
    <string name="hint_nota">Nota</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="asignatura">Asignatura</string>
    <string name="nota">Nota</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_exitApp">Exit App</string>
    <string name="btnSignOut">Salir</string>
    <!-- para no publicar la api en git,
+    la puedo exportar en variables de entorno
+    o en un archivo fuera del source tree
+    o bien con git.ignore-->
    +    <!--<string name="google_maps_key">aca va el apiKey</string> -->
    <string name="google_maps_key">AIzaSyB3gao1UzmlFS7dQrY_fGzR0gk1KkwYHyk</string>
</resources>